--- a/app/src/main/res/layout/dialog_count_details.xml
+++ b/app/src/main/res/layout/dialog_count_details.xml
@@ -16,6 +16,7 @@
         android:layout_marginBottom="16dp" />
 
     <TextView
+        android:id="@+id/tv_detail_subtitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/stats_pest_composition"
